--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
     "classnames": "^2.3.1",
+    "flag-icons": "^6.1.1",
     "i": "^0.3.7",
     "npm": "^8.5.1",
     "react": "^17.0.2",
