--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "classnames": "^2.3.1",
     "flag-icons": "^6.1.1",
     "i": "^0.3.7",
+    "i18next": "^21.6.12",
     "npm": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
