--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "classnames": "^2.3.1",
     "flag-icons": "^6.1.1",
     "i": "^0.3.7",
+    "i18next": "^21.6.12",
     "npm": "^8.5.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -72,6 +75,7 @@
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "webpack": "^5.69.1"
   }
 }
