--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
     "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
     "flag-icons": "^6.1.1",
     "i": "^0.3.7",
     "i18next": "^21.6.12",
@@ -29,7 +30,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.8",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "xlsx": "^0.18.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -75,6 +77,7 @@
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/file-saver": "^2.0.5",
     "@types/react-beautiful-dnd": "^13.1.2",
     "webpack": "^5.69.1"
   }
