--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "file-saver": "^2.0.5",
     "flag-icons": "^6.1.1",
