--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "flag-icons": "^6.1.1",
     "i": "^0.3.7",
     "i18next": "^21.6.12",
+    "jquery": "^3.6.0",
     "npm": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -79,6 +80,7 @@
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@types/file-saver": "^2.0.5",
+    "@types/jquery": "^3.5.14",
     "@types/redux-persist": "^4.3.1",
     "webpack": "^5.69.1"
   }
