--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,6 @@ WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
 
-RUN npm install
+COPY . ./
 
-EXPOSE 3000
-CMD ["npm", "start"]
+RUN npm install
