--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,85 +3,85 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-  "@fortawesome/fontawesome-svg-core": "^1.3.0",
-  "@fortawesome/free-regular-svg-icons": "^6.0.0",
-  "@fortawesome/free-solid-svg-icons": "^6.0.0",
-  "@fortawesome/react-fontawesome": "^0.1.17",
-  "@reduxjs/toolkit": "^1.7.2",
-  "@testing-library/jest-dom": "^4.2.4",
-  "@testing-library/react": "^9.5.0",
-  "@testing-library/user-event": "^7.2.1",
-  "@types/jest": "^24.9.1",
-  "@types/node": "^12.20.46",
-  "@types/react": "^16.14.23",
-  "@types/react-dom": "^16.9.14",
-  "@types/react-redux": "^7.1.22",
-  "axios": "^0.27.2",
-  "classnames": "^2.3.1",
-  "file-saver": "^2.0.5",
-  "flag-icons": "^6.1.1",
-  "i": "^0.3.7",
-  "i18next": "^21.6.12",
-  "jquery": "^3.6.0",
-  "npm": "^8.5.1",
-  "react": "^17.0.2",
-  "react-dom": "^17.0.2",
-  "react-i18next": "^11.15.5",
-  "react-redux": "^7.2.6",
-  "react-router-dom": "^6.2.1",
-  "react-scripts": "5.0.0",
-  "redux-persist": "^6.0.0",
-  "sass": "^1.49.8",
-  "typescript": "~4.1.5",
-  "xlsx": "^0.18.3"
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@reduxjs/toolkit": "^1.7.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.20.46",
+    "@types/react": "^16.14.23",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.22",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
+    "flag-icons": "^6.1.1",
+    "i": "^0.3.7",
+    "i18next": "^21.6.12",
+    "jquery": "^3.6.0",
+    "npm": "^8.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.5",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.49.8",
+    "serve": "^14.0.1",
+    "typescript": "~4.1.5",
+    "xlsx": "^0.18.3"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "storybook": "start-storybook -p 6006 -s public",
-  "build-storybook": "build-storybook -s public"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
-  "extends": "react-app",
-  "overrides": [
-    {
-    "files": [
-      "**/*.stories.*"
-    ],
-    "rules": {
-      "import/no-anonymous-default-export": "off"
-    }
-    }
-  ]
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "browserslist": {
-  "production": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ],
-  "development": [
-    "last 1 chrome version",
-    "last 1 firefox version",
-    "last 1 safari version"
-  ]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-  "@storybook/addon-actions": "^6.4.19",
-  "@storybook/addon-essentials": "^6.4.19",
-  "@storybook/addon-interactions": "^6.4.19",
-  "@storybook/addon-links": "^6.4.19",
-  "@storybook/builder-webpack5": "^6.4.19",
-  "@storybook/manager-webpack5": "^6.4.19",
-  "@storybook/node-logger": "^6.4.19",
-  "@storybook/preset-create-react-app": "^4.0.1",
-  "@storybook/react": "^6.4.19",
-  "@storybook/testing-library": "^0.0.9",
-  "@types/file-saver": "^2.0.5",
-  "@types/jquery": "^3.5.14",
-  "@types/redux-persist": "^4.3.1",
-  "webpack": "^5.69.1"
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/node-logger": "^6.4.19",
+    "@storybook/preset-create-react-app": "^4.0.1",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
+    "@types/file-saver": "^2.0.5",
+    "@types/jquery": "^3.5.14",
+    "webpack": "^5.69.1"
   }
 }
