--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "deploy": "aws s3 sync build/ s3://fmi-graduation-project"
   },
   "eslintConfig": {
     "extends": "react-app",
